# face-detection-algorithms-comparison

./: detect_and_recog.py  pyproject.toml
src/: count_metrics.py  utils.py
src/IResNet100/: utils.py
src/RetinaFace/: pseudo_labeling.py  save_crops.py  utils.py
src/RetinaFace_h5/: pseudo_labeling.py  save_crops.py
