[tool.poetry]
name = "face-detection-algorithms-comparison"
version = "0.1.0"
description = "Face detection and recognition algorithm"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
retina-face = "^0.0.10"
facenet-pytorch = "^2.5.2"
face-recognition = "^1.3.0"
pandas = "^1.4.2"
onnx = "^1.11.0"
keras2onnx = "^1.7.0"
tf2onnx = "^1.9.3"
onnxruntime = "^1.11.0"
matplotlib = "^3.5.1"
sklearn = "^0.0"
seaborn = "^0.11.2"
deepface = "^0.0.74"
onnxruntime-gpu = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
